PR middle-end/26983

gcc/
	* builtins.c (expand_builtin_setjmp): Force next_lab to be
	preserved.

testsuite/
	* gcc.dg/pr26983.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@116826 138bc75d-0d04-0410-961f-82ee72b054a4